--- a/scss/kaupaContent.scss
+++ b/scss/kaupaContent.scss
@@ -46,13 +46,13 @@
     border: 0 none;
   }
 }
-@media (min-width: $phone-max-width) {
+@media (min-width: $phone-max-width + 1) {
   .form_content {
     display: flex;
     justify-content: space-around;
   }
 }
-@media (max-width: $phone-max-width) {
+@media (max-width: $phone-max-width + 1) {
   .form_content {
     margin-left: 1.25em;
 
